@@ -1,3 +1,7 @@
+2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/devel/index.html: update INSTALL links.
+
 2005-03-23  Graham Percival  <gperlist@shaw.ca>
 
 	* site/switch/tour.html: removed link to Erich
